Moved css related to View Workout to ViewWorkout.module.css, converted all classNames to use them and shortened and removed some unnecessary classNames. Fixed tags not showing correctly when there are too many

--- a/src/components/pages/Workout/workout.css
+++ b/src/components/pages/Workout/workout.css
@@ -1,183 +1,3 @@
-.view-workout-page{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-}
-@media (min-width: 800px) {
-    .view-workout-page{
-        grid-column: 2 / 4;
-        padding: 20px 50px;
-        width: 100%;
-        overflow-x: hidden;
-    }
-   
-    
-}
-.view-workout-page .header button{
-    width: 50px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    font-size: 2rem;
-    font-weight: 600;
-    position: absolute;
-    top: 30px;
-    right: 20px;
-}
-.view-workout-page .header a{
-    position: absolute;
-    right: 20px;
-    top: 40px;
-}
-.view-workout-page .workout-info{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 10px;
-    border-radius: 5px;
-}
-.subtle-subtitle{
-    font-size: 1.1rem;
-    color: rgba(255, 255, 255, 0.342);
-}
-.view-workout-page .info-block{
-    width: calc(50% - 5px);
-    display: flex;
-    flex-direction: column;
-    background-color: #1A1A1B;
-    padding: 10px;
-    border-radius: 5px;
-    gap: 10px;
-}
-.view-workout-page .workout-description{
-    background-color: #1A1A1B;
-    padding: 10px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-.view-workout-page .info-block .info-block-header{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-.view-workout-page .info-block .info-block-header img{
-    width: 15px;
-    height: 15px;
-}
-.view-workout-page .info-block .info-block-value{
-   display: flex;
-   align-items: center;
-   padding-left: 10px;
-}
-.view-workout-page .workout-exercises{
-    height: calc(50% - 40px);
-    border-radius: 5px;
-    padding: 10px;
-    width: 100%;
-    gap: 10px;
-    display: flex;
-    flex-direction: column;
-}
-.view-workout-page .workout-exercises .exercise-name{
-    display: flex;
-}
-.view-workout-page .workout-exercises .exercise-body{
-    width: 100%;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    background-color: #1A1A1B;
-    border-radius: 5px;
-}
-.view-workout-page .workout-exercises .exercise-body .exercise-name{
-    margin-right: auto;
-    width: calc(100% - 135px);
-    overflow: hidden;
-}
-.view-workout-page .workout-exercises .exercise-body .exercise-index{
-    width: 40px;
-    border-right: 2px solid rgba(221, 221, 221, 0.1);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-
-.view-workout-page .workout-exercises .exercise-body .exercise-sets{
-    width: 75px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-.view-workout-buttons{
-    width: 100%;
-    background-color: #1A1A1B;
-    height: 70px;
-    position: sticky;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    gap: 10px;
-    border-radius: 15px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-}
-.view-workout-buttons button,
-.start-workout-button{
-    border-radius: 10px;
-}
-.start-workout-button{
-    margin-left: auto;
-    width: auto;
-    flex-grow: 1;
-}
-
-.buttons-container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
-.view-workout-menu-buttons{
-    width: 200px;
-    height: 50px;
-    display: flex;
-    background-color: #111214;
-    border-radius: 10px;
-    
-
-}
-.view-workout-menu-button{
-    width: calc(50% - 0px);
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    background-color: transparent;
-    border: none;
-    text-decoration: none;
-    font-size: 1.1rem;
-}
-
-
-
-.view-workout-buttons .divider{
-    height: 75%;
-    width: 2px;
-    background-color: rgba(255, 255, 255, 0.151);
-    border-radius: 3px;
-}
-
-
-
 
 
 /* Create/Edit Workout Page */
@@ -275,10 +95,17 @@
 .create-workout-page .exercise-body .exercise-sets{
     width: 75px;
 }
-.create-workout-page .selected-tags{
+.tags-block{
+    overflow-x: auto;
+    max-width: calc(100vw - 30px);
+}
+.tags-block .tags{
+    width: 100%;
+    max-width: 100%;
+    overflow-x: auto;
+    flex-shrink: 0;
     display: flex;
-    flex-direction: column;
-    padding: 10px 0;
+    align-items: center;
     gap: 10px;
 }
 .create-workout-page .tag-body{
@@ -289,6 +116,8 @@
     gap: 10px;
     color: white;
     background-color: #1A1A1B;
+    flex-shrink: 0;
+    white-space: nowrap;
 }
 .create-workout-page .tag-color{
     height: 100%;
